workloads/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: default
  labels:
    app: vikunja
spec:
  type: ClusterIP
  selector:
    app: vikunja
  ports:
    - port: 80
      targetPort: 3456
      protocol: TCP
      name: http
